Fixed Tycho compiler error